--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ text-align: center;
 	text-align: center;
 }
 h1 {
-	margin: 0px;
+	margin: 0px 0 5px 0;
 	color: #000000;
 	font-size: 24px;
 	font-family: "Georgia", "Myriad Pro";
