--- a/style.css
+++ b/style.css
@@ -45,6 +45,10 @@ font-size: 25px;
 color: #FFE4B5;	
 text-align: center;
 }
+#zagolovok {
+font-size: 25px;
+text-align: center;
+}
 #menu {
 	background-color: #000000;
 	padding: 1px 1px;
