--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ text-align: center;
 }
 h1 {
 	margin: 0px 0 5px 0;
-	color: #000000;
+	color: #FFE4B5;
 	font-size: 24px;
 	font-family: "Georgia", "Myriad Pro";
 	font-weight: normal;
